--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,10 @@
 @font-face{
-	font-family:"icons-turn-arrow";
-	src:url("../fonts/icons/arrow.svg") format("svg");
+	 font-family: 'iconfont';
+	  src: url('../fonts/icons/iconfont.eot');
+	  src: url('../fonts/icons/iconfont.eot?#iefix') format('embedded-opentype'),
+	  url('../fonts/icons/iconfont.woff') format('woff'),
+	  url('../fonts/icons/iconfont.ttf') format('truetype'),
+	  url('../fonts/icons/iconfont.svg#iconfont') format('svg');
 }
 
 /* Stiziles */
@@ -18,7 +22,7 @@ html, body {
 /*stage------start*/
 .stage{
 	width:100%;
-	height:680px;
+	height:100%;
 	position:relative;
 }
 /*stage------end*/
@@ -32,6 +36,7 @@ html, body {
 	overflow:hidden;
 	background-color:#ddd;
 	perspective:1800px;
+	
 	@at-root{
 		.img-figure{
 			width:260px;
@@ -45,6 +50,7 @@ html, body {
 			transform-style:preserve-3d;
 			transition:left 0.6s ease-in-out,top 0.6s ease-in-out,transform 0.6s ease-in-out;
 			cursor:pointer;
+			box-shadow:1px 1px 3px #aaa;
 			img{
 				width:200px;
 				height:200px;
@@ -105,10 +111,13 @@ div.imgBack{
 div.controlLink{vertical-align:middle;transition:all 0.6s ease-in-out;cursor:pointer;display:block;width:40px;height:40px;background:#aaa;border-radius:100%;display:inline-block;margin:0px 5px 0px;text-align:center;line-height:40px;transform:scale(0.5)}
 div.controlLink.conIsCenter{line-height:30px;background:#888;transform:scale(1);
 &::after{
-	font-family:"icons-turn-arrow";
+	font-family:"iconfont";
 	content:"\e600";
 	color:white;
-	line-height:30px;
+	line-height:40px;
+	display:block;
+	width:40px;
+	height:40px;
 	-webkit-font-smoothing:antialiased;
 	-moz-osx-font-smoothing:grayscale;
 }
